test-results/map_3.err
[1m/mnt/c/Users/matthew/git/upp/examples/map_3.c:20:5: error: @map expected 3 arguments, but found 2[0m
    @map(arr, z) { z = z + 10; } { z = z + 100; };
    [1;31m^[0m
